initial websocket config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,36 @@
 asgiref
+attrs
+autobahn
+Automat
+cbor2
+cffi
 channels
+channels_redis
+constantly
+cryptography
+daphne
 Django
 django-cors-headers
 djangorestframework
 djangorestframework_simplejwt
 gunicorn
+hyperlink
+idna
+Incremental
+msgpack
 packaging
 psycopg2-binary
+py-ubjson
+pyasn1
+pyasn1_modules
+pycparser
 PyJWT
+pyOpenSSL
+redis
+service-identity
 sqlparse
+Twisted
+txaio
+typing_extensions
+ujson
+zope.interface
